<?xml version="1.0"?>
<package>
  <name>fg_localize</name>
  <version>0.0.0</version>
  <description>Uses factor graphs to efficiently localize the robot</description>

  <maintainer email="chsahit@gmail.com">Sahit Chintalalapudi</maintainer>



  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="website">chsahit.github.io</url>


  <author email="chsahit@gmail.com">Sahit Chintalalapudi</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
